[package]
name = "ab-riscv-primitives"
description = "Composable RISC-V primitives (instructions, registers) and abstractions around them"
keywords = ["riscv", "risc-v", "decoder", "no-std"]
repository = "https://github.com/nazar-pc/abundance"
homepage = "https://github.com/nazar-pc/abundance/tree/main/crates/execution/ab-riscv-primitives"
license = "0BSD"
version = "0.0.3"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2024"
include = [
    "/src",
    "/build.rs",
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/README.md",
]
links = "ab-riscv-primitives"

[package.metadata.docs.rs]
all-features = true

[dependencies]
ab-riscv-macros = { workspace = true, features = ["proc-macro"] }

[build-dependencies]
ab-riscv-macros = { workspace = true, features = ["build"] }

[lints]
workspace = true
